B&L QA/objects/Account_Contact_Junction__c.object
<CustomObject>
    <description>To allow Contacts to be related to multiple Accounts</description>
    <fields>
        <fullName>AccountContactIdPairTxt__c</fullName>
        <description>Indexed field containing existing Account/Contact ID pairs</description>
        <label>AccountContactIdPairTxt</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountContactIdPair__c</fullName>
        <description>Used by Apex to lookup existing account ID Contact ID pairs</description>
        <formula>(Account__c &amp; Contact__c)</formula>
        <inlineHelpText>Used by Apex to lookup existing account ID Contact ID pairs</inlineHelpText>
        <label>AccountContactIdPair</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <formula>(  Account__r.Phone )</formula>
        <label>Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Shipping_Address__c</fullName>
        <formula>(  Account__r.ShippingStreet + &apos; &apos;  + Account__r.ShippingCity + &apos; &apos; +  Account__r.ShippingState + &apos; &apos;  +  Account__r.ShippingPostalCode  )</formula>
        <label>Account Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account/Contact Relationships</relationshipLabel>
        <relationshipName>Account_Contact_Relationships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Appointment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appointment Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Best_Time_to_Visit__c</fullName>
        <description>ECS</description>
        <label>Best Time to Visit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Full_Name__c</fullName>
        <formula>(Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <description>For use in mobile profiles</description>
        <formula>( Contact__r.Phone )</formula>
        <inlineHelpText>For use in mobile profiles</inlineHelpText>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title_Account__c</fullName>
        <description>For mobile profiles</description>
        <formula>( Contact_Full_Name__c  &amp; &quot;-&quot; &amp;  Contact_Title__c &amp; &quot;-&quot; &amp; Account__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For mobile profiles</inlineHelpText>
        <label>Contact Title Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <formula>(Contact__r.Title)</formula>
        <label>Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account/Contact Relationships</relationshipLabel>
        <relationshipName>Account_Contact_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Used by EMEASU</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>Used by EMEASU</description>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Friday_Hours__c</fullName>
        <description>ECS</description>
        <inlineHelpText>Hours this contact is at this account on Fridays</inlineHelpText>
        <label>Friday Hours</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by EMEASU</description>
        <label>Inactive Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MD_2014_Antibiotics_Rx__c</fullName>
        <formula>Contact__r.MD_2014_Antibiotics_Rx__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MD 2014 Antibiotics Rx</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MD_2014_NSAID_Rx__c</fullName>
        <formula>Contact__r.MD_2014_NSAID_Rx__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MD 2014 NSAID Rx</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MD_2014_Steroid_Rx__c</fullName>
        <formula>Contact__r.MD_2014_Steroid_Rx__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MD 2014 Steroid Rx</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MD_Cataract_Volume__c</fullName>
        <label>MD Cataract Volume Factored</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MD_Retina_Volume__c</fullName>
        <label>MD Retina Volume Factored</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>Used by EMEASU</description>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Monday_Hours__c</fullName>
        <description>ECS</description>
        <inlineHelpText>Hours this contact is at this account on Mondays</inlineHelpText>
        <label>Monday Hours</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Used by EMEASU</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Saturday_Hours__c</fullName>
        <description>ECS</description>
        <inlineHelpText>Hours this contact is at this account on Saturdays</inlineHelpText>
        <label>Saturday Hours</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sunday_Hours__c</fullName>
        <description>ECS</description>
        <inlineHelpText>Hours this contact is at this account on Sundays</inlineHelpText>
        <label>Sunday Hours</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thursday_Hours__c</fullName>
        <description>ECS</description>
        <inlineHelpText>Hours this contact is at this account on Mondays</inlineHelpText>
        <label>Thursday Hours</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tuesday_Hours__c</fullName>
        <description>ECS</description>
        <inlineHelpText>Hours this contact is at this account on Tuesdays</inlineHelpText>
        <label>Tuesday Hours</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wednesday_Hours__c</fullName>
        <description>ECS</description>
        <inlineHelpText>Hours this contact is at this account on Wednesdays</inlineHelpText>
        <label>Wednesday Hours</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Account/Contact Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account/Contact Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>